--- a/GC.css
+++ b/GC.css
@@ -3,7 +3,7 @@
 }
 
 .navSection{
-  width:100%; background-color:#5c5d62; margin-left:-10px; padding-left:10px; padding-top:5px; padding-bottom:5px; padding-right:10px; text-align:center
+  width:100%; background-color:#5c5d62; padding-left:10px; padding-top:5px; padding-bottom:5px; padding-right:10px; text-align:center
 }
 
 .titleHeading{
